# gurukul

./: .bundleignore  .env.example  .gitignore  .npmrc  README.md  app.yaml  databricks.yml  deploy.sh  docusaurus.config.ts  index.html  package-lock.json  package.json  pyproject.toml  setup.sh  sidebars.generated.ts  sidebars.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy.yml
agent_server/: agent.py  arxiv.py  corpus.py  db.py  embeddings.py  guardrails.py  llm_client.py  prompts.py  routes.py  schemas.py  seed_resolver.py  sse.py  start_server.py  utils.py  web_search.py
agent_server/grounding/: __init__.py  contracts.py  policy.py  resolver.py
agent_server/grounding/sources/: __init__.py  arxiv_source.py  base.py  lakebase_corpus_source.py  semantic_scholar_source.py
docs/: 000-intro.mdx  ARCHITECTURE.md  PRD-conceptual-connections-learning-engine.md  PRD-research-pipeline.md
docs/blog/: addressing-ai-research-learning-with-gurukul.md
docs/blog/assets/addressing-ai-research-learning-with-gurukul/: diagram-01.mmd  diagram-02.mmd  diagram-03.mmd
evals/: content_audit.py  corpus_audit.py  corpus_golden_cases.json  datasets.py  grounding_smoke.py  run_eval.py  scorers.py  seed_resolution_cases.json  seed_resolution_eval.py
jobs/: corpus_build.py  deploy_specter2_job.py  progress.py
scripts/: _common.sh  audit_content.sh  audit_corpus.sh  build_corpus.sh  deploy_specter2.sh  fm-client.ts  journey.ts  mdx-render.ts  outline-proposal.ts  prompts.ts  protocols.ts  schema.sql  schema.ts  setup_search.sh  setup_secrets.sh  smoke-test.ts  start_app.py  test_grounding.sh  test_seed_resolver.sh
specter2/: model.py  register_specter2.py  requirements.txt
src/: App.tsx  main.tsx
src/components/: ChallengePanel.tsx  ConfidenceTracker.tsx  ContentQuality.tsx  Critique.tsx  EvalDashboard.tsx  Experiment.tsx  Gist.tsx  KeyAspect.tsx  MindMap.tsx  ModelComparison.tsx  OpenProblems.tsx  References.tsx  ResearchPanel.tsx  ResearchSeed.tsx  Summary.tsx  TopicContent.tsx  TopicHeader.tsx  TopicTree.tsx
src/css/: custom.css
src/lib/: storage.ts
src/pages/: index.tsx  journey-dashboard.tsx  proposal.tsx
src/theme/: MDXComponents.tsx
