[project]
name = "gurukul"
version = "0.1.0"
description = "Mentorship-Driven Learning for AI Researchers, powered by Teacher/Student agents on Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.129.0",
  "uvicorn>=0.41.0",
  "databricks-openai[memory]>=0.15.0",
  "databricks-sdk>=0.79.0",
  "databricks-agents>=1.9.3",
  "databricks-ai-bridge[agent-server]>=0.19.0",
  "mlflow>=3.10.1",
  "openai-agents>=0.4.1",
  "python-dotenv>=1.2.1",
  "uuid-utils>=0.10.0",
  "psycopg[binary,pool]>=3.2.0",
  "sse-starlette>=2.0.0",
  "httpx>=0.28.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "evals", "scripts"]

[dependency-groups]
dev = [
  "hatchling>=1.28.0",
  "pytest>=9.0.2",
]

setup = [
  "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]

[project.scripts]
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
gurukul-eval = "evals.run_eval:main"
